sonarqube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  labels:
    app: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:9.9.4-community
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: sonar-volume
          mountPath: /opt/sonarqube/data
          subPath: data
        - name: sonar-volume
          mountPath: /opt/sonarqube/extensions
          subPath: extensions
        - name: sonar-volume
          mountPath: /opt/sonarqube/logs
          subPath: logs
      securityContext:
        fsGroup: 1000
      volumes:
        - name: sonar-volume
          persistentVolumeClaim:
            claimName: sonar-pvc
