sonarqube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
    kubernetes.io/ingress.class: nginx
spec:
  # ingressClassName: nginx
  rules:
  - host: sonar.fernandojrlinux.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube
            port:
              number: 80
